turned off EGL warnings

--- a/ParaView/Hello_Molecule.ipynb
+++ b/ParaView/Hello_Molecule.ipynb
@@ -8,9 +8,9 @@
     "This notebook reads a timeseries of molecular trajectories.\n",
     "Then, it creates a ParaView display widget showing the primary render view.\n",
     "The notebook further demonstrates how we may use interaction widgets (sliders), to change the timestep.\n",
-    "Lastly, we switch to raytracing and path-tracing mode to demonstrate a photo-realistic rendering\n",
+    "Lastly, we switch to raytracing and to demonstrate a photo-realistic rendering, and create a movie\n",
     "\n",
-    "Tested: Mon May  3 15:45:28 CEST 2021"
+    "Tested: Wed Aug 24 08:35:57 CEST 2022"
    ]
   },
   {
@@ -20,7 +20,17 @@
    "outputs": [],
    "source": [
     "from paraview.simple import *\n",
-    "\n",
+    "# to turn off some annoying warnings\n",
+    "from vtkmodules.vtkCommonCore import vtkLogger\n",
+    "vtkLogger.SetStderrVerbosity(vtkLogger.VERBOSITY_OFF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Version = str(GetParaViewVersion())\n",
     "\n",
     "info = GetOpenGLInformation(location=servermanager.vtkSMSession.RENDER_SERVER)\n",
@@ -97,8 +107,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ResetCamera()\n",
     "GetActiveCamera().Azimuth(30)\n",
-    "GetActiveCamera().Elevation(15)"
+    "GetActiveCamera().Elevation(15)\n",
+    "GetActiveCamera().Dolly(2)"
    ]
   },
   {
@@ -138,10 +150,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bounds =(-4.14, 6.56, -4.60, 8.02, -0.63, 10.35)\n",
+    "ResetCamera()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Add three planes around the molecule\n",
-    "bounds = computeMoleculeBonds1.GetDataInformation().GetBounds()\n",
-    "mat1 = \"Metal_Scratched\"\n",
-    "mat1 = \"Metal_Stainless_Steel_mirror\"\n",
     "# add P percent of each dimensions. P > 0\n",
     "P = 0.3\n",
     "xoffset = (bounds[1]-bounds[0])*P\n",
@@ -153,21 +172,18 @@
     "pxy.Point1 = [bounds[1]+xoffset, bounds[2]-yoffset, bounds[4]-zoffset]\n",
     "pxy.Point2 = [bounds[0]-xoffset, bounds[3]+yoffset, bounds[4]-zoffset]\n",
     "r1=Show(pxy)\n",
-    "r1.OSPRayMaterial = mat1\n",
     "\n",
     "pyz = Plane(registrationName='Plane-YZ')\n",
     "pyz.Origin = pxy.Origin\n",
     "pyz.Point1 = [bounds[0]-xoffset, bounds[3]+yoffset, bounds[4]-zoffset]\n",
     "pyz.Point2 = [bounds[0]-xoffset, bounds[2]-yoffset, bounds[5]+zoffset]\n",
     "r2=Show(pyz)\n",
-    "r2.OSPRayMaterial = 'None'\n",
     "\n",
     "pxz = Plane(registrationName='Plane-XZ')\n",
     "pxz.Origin = pxy.Origin\n",
     "pxz.Point1 = [bounds[1]+xoffset, bounds[2]-yoffset, bounds[4]-zoffset]\n",
     "pxz.Point2 = [bounds[0]-xoffset, bounds[2]-yoffset, bounds[5]+zoffset]\n",
-    "r3=Show(pxz)\n",
-    "r3.OSPRayMaterial = 'PBR_Brick_Wall_1'"
+    "r3=Show(pxz)"
    ]
   },
   {
@@ -179,20 +195,8 @@
     "renderView1.EnableRayTracing = 1\n",
     "renderView1.Denoise = 1\n",
     "renderView1.BackEnd = 'OSPRay raycaster'\n",
-    "renderView1.ProgressivePasses=1000\n",
+    "renderView1.ProgressivePasses=10\n",
     "renderView1.Shadows = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if info.GetVendor().split()[0] == 'NVIDIA':\n",
-    "  renderView1.BackEnd = 'OSPRay pathtracer'\n",
-    "else:\n",
-    "  renderView1.BackEnd = 'OSPRay pathtracer'"
    ]
   },
   {
@@ -210,8 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renderView1.ProgressivePasses=1\n",
-    "renderView1.SamplesPerPixel=10\n",
+    "renderView1.ProgressivePasses=0\n",
+    "renderView1.SamplesPerPixel=3\n",
     "# save all images to disk and encode into a movie\n",
     "frequency=10\n",
     "for i, ti in enumerate(range(0,len(molecule1.TimestepValues), frequency)):\n",
@@ -246,14 +250,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!ffmpeg -i /dev/shm/molecule_%06d.png -c:v libx265 /dev/shm/movie-file.mp4"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv-kernel",
    "language": "python",
-   "name": "python3"
+   "name": "myenv-kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -265,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
