--- a/ParaView/pvNVIDIA-IndeX.ipynb
+++ b/ParaView/pvNVIDIA-IndeX.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ParaView Volume Rendering with NVIDIA IndeX"
+    "# ParaView Volume Rendering with NVIDIA IndeX\n",
+    "\n",
+    "Tested on Piz Daint Tue Aug 23 11:45:48 CEST 2022"
    ]
   },
   {
@@ -21,8 +23,13 @@
    "outputs": [],
    "source": [
     "from paraview.simple import *\n",
+    "\n",
+    "# to turn off some annoying warnings\n",
+    "from vtkmodules.vtkCommonCore import vtkLogger\n",
+    "vtkLogger.SetStderrVerbosity(vtkLogger.VERBOSITY_OFF)\n",
+    "\n",
     "from paraview.modules.vtkRemotingCore import vtkProcessModule\n",
-    "LoadPlugin(\"/apps/daint/UES/jenkins/7.0.UP02-20.11/gpu/easybuild/software/ParaView/5.9.0-CrayGNU-20.11-EGL-python3/lib64/paraview-5.9/plugins/pvNVIDIAIndeX/pvNVIDIAIndeX.so\", ns=globals())"
+    "LoadPlugin(\"/apps/daint/UES/jenkins/7.0.UP03/21.09/daint-gpu/software/ParaView/5.10.1-CrayGNU-21.09-EGL/lib64/paraview-5.10/plugins/pvNVIDIAIndeX/pvNVIDIAIndeX.so\", ns=globals())"
    ]
   },
   {
@@ -116,7 +123,7 @@
     "  img_writer.SetFileName(filename)\n",
     "  img_writer.Write()\n",
     "\n",
-    "# save animage on the client-side\n",
+    "# save animage on Piz Daint $HOME\n",
     "#SaveImage(\"/users/jfavre/foo2.png\")"
    ]
   },
@@ -179,14 +186,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ResetCamera()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv-kernel",
    "language": "python",
-   "name": "python3"
+   "name": "myenv-kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -198,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
