update plugin path

--- a/ParaView/ParaView-SMP-Contours.ipynb
+++ b/ParaView/ParaView-SMP-Contours.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tested ParaView 5.10 Wed Mar 23 15:55:39 CET 2022"
+    "## Tested ParaView 5.10.1 Mon Aug 22 04:34:29 PM CEST 2022"
    ]
   },
   {
@@ -22,8 +22,7 @@
    "source": [
     "from paraview.simple import *\n",
     "from paraview.modules.vtkRemotingCore import vtkProcessModule\n",
-    "# Tested eiger Thu Feb 17 09:20:06 CET 2022\n",
-    "# Tested daint Thu Mar 10 08:51:11 CET 2022"
+    "# Tested Mon Aug 22 04:34:29 PM CEST 2022"
    ]
   },
   {
@@ -42,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = ImageReader(FileNames=['/scratch/snx3000/jfavre/50.density-log_1024x1024x2048_float.raw'])\n",
+    "reader = ImageReader(FileNames=['/scratch/snx3000/jfavre/NVIDIA/50.density-log_1024x1024x2048_float.raw'])\n",
     "reader.DataScalarType = 'float'\n",
     "reader.DataByteOrder = 'LittleEndian'\n",
     "reader.DataExtent = [0, 2047, 0, 1023, 0, 1023]\n",
@@ -111,18 +110,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#LoadPlugin(\"/apps/daint/UES/jenkins/7.0.UP02-20.11/gpu/easybuild/software/ParaView/5.9.0-CrayGNU-20.11-EGL-python3/lib64/paraview-5.9/plugins/AcceleratedAlgorithms/AcceleratedAlgorithms.so\", ns=globals())\n",
-    "fname = \"/apps/pilatus/UES/jenkins/1.4.0/software/ParaView/5.10.0-cpeCray-21.12-OSMesa/lib64/paraview-5.10/plugins/AcceleratedAlgorithms/AcceleratedAlgorithms.so\"\n",
-    "fname = \"/apps/daint/UES/jenkins/7.0.UP03/21.09/daint-gpu/software/ParaView/5.10.0-CrayGNU-21.09-EGL/lib/paraview-5.10/plugins/AcceleratedAlgorithms/AcceleratedAlgorithms.so\"\n",
-    "LoadPlugin(fname, ns=globals())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -130,7 +117,17 @@
     "\n",
     "https://vtk.org/doc/nightly/html/classvtkFlyingEdges3D.html#details\n",
     "\n",
-    "This class has been threaded with vtkSMPTools. Using TBB or other non-sequential type may improve performance significantly."
+    "This class has been threaded with vtkSMPTools. Using TBB or other non-sequential type may improve performance significantly. This filter is available ina plugin that needs to be explicitly loaded."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"/apps/daint/UES/jenkins/7.0.UP03/21.09/daint-gpu/software/ParaView/5.10.1-CrayGNU-21.09-EGL/lib/paraview-5.10/plugins/AcceleratedAlgorithms/AcceleratedAlgorithms.so\"\n",
+    "LoadPlugin(fname, ns=globals())"
    ]
   },
   {
@@ -171,14 +168,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ResetCamera()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv-kernel",
    "language": "python",
-   "name": "python3"
+   "name": "myenv-kernel"
   },
   "language_info": {
    "codemirror_mode": {
