--- a/ParaView/Hello_Sphere-ParaView.2.ipynb
+++ b/ParaView/Hello_Sphere-ParaView.2.ipynb
@@ -5,8 +5,11 @@
    "metadata": {},
    "source": [
     "# ParaView Hello Sphere Test 2\n",
-    "This notebook creates a synthetic data source (a sphere), and creates a polygonal display of it.\n",
-    "We demonstrate how to connect to an external parallel ParaView server"
+    "This notebook creates a synthetic data source (a sphere), and creates a polygonal display of it. So far, we have used a single task for the ParaView server (pvserver).\n",
+    "\n",
+    "We now demonstrate how to run an MPI-enabled pserver on the allocated node\n",
+    "\n",
+    "Tested Wed Aug 24 10:42:45 AM CEST 2022"
    ]
   },
   {
@@ -16,6 +19,10 @@
    "outputs": [],
    "source": [
     "from paraview.simple import *\n",
+    "\n",
+    "# to turn off some annoying warnings\n",
+    "from vtkmodules.vtkCommonCore import vtkLogger\n",
+    "vtkLogger.SetStderrVerbosity(vtkLogger.VERBOSITY_OFF)\n",
     "from paraview.modules.vtkRemotingCore import vtkProcessModule"
    ]
   },
@@ -23,9 +30,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After putting the client in waiting mode with the next call, we launch an external mpi job\n",
-    "The Paraview server connects by default on port=11111.\n",
-    "At CSCS, we use the userid, which is unique for all users."
+    "we first launch a parallel MPI job on the node, using a second notebook.\n",
+    "\n",
+    "The jupyter client will connect to the ParaView server on the same node\n",
+    "\n",
+    "**You must run the notebook called Hello_Sphere-ParaView.2-Helper.ipynb before proceeding**"
    ]
   },
   {
@@ -34,31 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "userid=1100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "if running locally on my desktop:\n",
-    "mpiexec -n 3 /local/apps/ParaView/5.8-egl/bin/pvserver -rc -ch=localhost -sp=1100\n",
-    "\n",
-    "if running on Piz Daint:\n",
-    "\n",
-    "ssh -l jfavre -R 1100:localhost:1100 daint101.cscs.ch\n",
-    "\n",
-    "module load daint-gpu ParaView;\n",
-    "srun -p debug -t 00:05:00 -n 12 -N 1 -C gpu --cpu_bind=sockets pvserver -rc -ch=daint101.cscs.ch -sp=1100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ReverseConnect(str(userid))"
+    "Connect(\"localhost\")"
    ]
   },
   {
@@ -93,10 +78,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "view = GetRenderView()\n",
+    "from ipyparaview.widgets import PVDisplay\n",
+    "pvdisp = PVDisplay(view)\n",
+    "w = display(pvdisp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sphere = Sphere(ThetaResolution=32, PhiResolution=32)\n",
     "pidscal = ProcessIdScalars(sphere)\n",
     "\n",
-    "rep = Show(pidscal, GetActiveView())\n",
+    "rep = Show(pidscal, view)\n",
     "ColorBy(rep, 'ProcessId')\n",
     "processIdLUT = GetColorTransferFunction('ProcessId')\n",
     "processIdLUT.AnnotationsInitialized = 1\n",
@@ -106,15 +103,7 @@
     "    1.0, 1.0, 1.0,\n",
     "    1.0, 0.0, 0.0,\n",
     "    0.0, 1.0, 0.0,\n",
-    "    0.0, 0.0, 1.0,\n",
-    "    1.0, 1.0, 0.0,\n",
-    "    1.0, 0.0, 1.0,\n",
-    "    0.0, 1.0, 1.0,\n",
-    "    0.63, 0.63, 1.0,\n",
-    "    0.67, 0.5, 0.33,\n",
-    "    1.0, 0.5, 0.75,\n",
-    "    0.53, 0.35, 0.7,\n",
-    "    1.0, 0.75, 0.5]\n",
+    "    0.0, 0.0, 1.0]\n",
     "\n",
     "a = []\n",
     "for i in range(nbprocs):\n",
@@ -131,9 +120,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyparaview.widgets import PVDisplay\n",
-    "disp = PVDisplay(GetActiveView())\n",
-    "w = display(disp)"
+    "ResetCamera()\n",
+    "GetActiveCamera().Dolly(1.4)"
    ]
   },
   {
@@ -163,12 +151,12 @@
     "def SaveImage(filename):\n",
     "  from vtk import vtkPNGWriter\n",
     "  img_writer = vtkPNGWriter()\n",
-    "  img_writer.SetInputConnection(disp.w2i.GetOutputPort())\n",
+    "  img_writer.SetInputConnection(pvdisp.w2i.GetOutputPort())\n",
     "  img_writer.SetFileName(filename)\n",
     "  img_writer.Write()\n",
     "\n",
     "# save animage on the client-side\n",
-    "SaveImage(\"/home/jfavre/foo2.png\")"
+    "#SaveImage(\"/users/jfavre/foo2.png\")"
    ]
   },
   {
@@ -190,9 +178,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv-kernel",
    "language": "python",
-   "name": "python3"
+   "name": "myenv-kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -204,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
